--- a/Buffalo data prep.Rmd
+++ b/Buffalo data prep.Rmd
@@ -44,7 +44,8 @@ buffalo_CLR <- buffalo_data %>%
          t1_rounded = round_date(buffalo_data$t1_, "hour"), 
          t2 = t2_, 
          yday = yday(t1_),
-         sl = sl_, log_sl = log_sl_, 
+         sl = sl_, sl_scaled = scale(sl),
+         log_sl = log_sl_, 
          ta = ta_, cos_ta = cos_ta_,
          year = year(t1_), 
          month = month(t1_), 
